# bot.py

./: .gitignore  auth_data.py  bot.py  main.py  pyproject.toml
config/: config.py
